--- a/20200531.ipynb
+++ b/20200531.ipynb
@@ -15,24 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boromeo = Held.from_xml('/home/roman/Documents/helden-software/exported/3 Boromeo Delazar1.xml')\n",
-    "gruppe = Heldengruppe.from_folder('/home/roman/mnt/DSA/Helden/')"
+    "boromeo = Held.from_xml('helden/BoromeoDelazar1.xml')\n",
+    "gruppe = Heldengruppe.from_folder('helden')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Boromeo    \u001b[31mFehlschlag.\u001b[0m  -1 übrig.\n",
-      "Kiaras     \u001b[31mFehlschlag.\u001b[0m  -3 übrig.\n",
-      "Pashkir    \u001b[31mFehlschlag.\u001b[0m  -3 übrig.\n",
-      "Salix      \u001b[31mFehlschlag.\u001b[0m  -1 übrig.\n",
-      "Zelena     \u001b[31mFehlschlag.\u001b[0m -11 übrig.\n"
+      "Zelena     \u001b[31mFehlschlag.\u001b[0m  -5 übrig.\n",
+      "Pashkir    \u001b[31mFehlschlag.\u001b[0m  -5 übrig.\n",
+      "Salix      \u001b[31mFehlschlag.\u001b[0m  -4 übrig.\n",
+      "Kiaras     \u001b[31mFehlschlag.\u001b[0m  -1 übrig.\n",
+      "Boromeo    \u001b[31mFehlschlag.\u001b[0m  -9 übrig.\n"
      ]
     }
    ],
@@ -42,48 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wurf 1: 12\n",
-      "Wurf 2: 15\n",
-      "Wurf 3: 14\n",
+      "Wurf 1: 3\n",
+      "Wurf 2: 7\n",
+      "Wurf 3: 4\n",
       "Geschafft.\n",
-      "Punkte übrig: 1\n"
+      "Punkte übrig: 4\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1,\n",
-       " {'geschafft': True,\n",
-       "  'übrig': 1,\n",
-       "  'patzer': False,\n",
-       "  'glücklich': False,\n",
-       "  'gewürfelt': array([12, 15, 14]),\n",
-       "  'eigenschaften': [10, 15, 13],\n",
-       "  'talentwert': 4})"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "boromeo.probe.Sprachen_kennen_Mohisch();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -212,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
